--- a/Note-Namer-Level-12/index.html
+++ b/Note-Namer-Level-12/index.html
@@ -103,7 +103,7 @@
         { src: "assets/images/Staff/D1.jpg",  fretSrc: "assets/images/Fingerboard/D1.jpg",          answer: "D",    audio: "assets/audio/Note Name Audio D1.wav" },
         { src: "assets/images/Staff/D2.jpg",  fretSrc: "assets/images/Fingerboard/D2.tif",          answer: "D",    audio: "assets/audio/Note Name Audio D2.wav" },
         { src: "assets/images/Staff/Ds1.jpg", fretSrc: "assets/images/Fingerboard/Ds1 or Eb1.jpg",  answer: "D#",   audio: "assets/audio/Note Name Audio Ds1-Eb1.wav" },
-        { src: "assets/images/Staff/Ds2.jpg", fretSrc: "assets/images/Fingerboard/A.jpg",           answer: "D#",   audio: "assets/audio/Note Name Audio Ds2.wav" },
+        { src: "assets/images/Staff/Ds2.jpg", fretSrc: "assets/images/Fingerboard/Ds2 or Eb2.jpg",  answer: "D#",   audio: "assets/audio/Note Name Audio Ds2.wav" },
         { src: "assets/images/Staff/E.jpg",   fretSrc: "assets/images/Fingerboard/E.jpg",           answer: "E",    audio: "assets/audio/Note Name Audio Low E.mp3" },
         { src: "assets/images/Staff/E1.jpg",  fretSrc: "assets/images/Fingerboard/E1.jpg",          answer: "E",    audio: "assets/audio/Note Name Audio E1.wav" },
         { src: "assets/images/Staff/E2.jpg",  fretSrc: "assets/images/Fingerboard/E2.jpg",          answer: "E",    audio: "assets/audio/Note Name Audio E2.wav" },
