--- a/Note-Namer-Level-8b/index.html
+++ b/Note-Namer-Level-8b/index.html
@@ -117,6 +117,7 @@
     let questionCount = 0;
     let voicing = 0;
     let score = 0;
+    let correctButtons = [];
     let imageOrder = shuffleOrder();
 
     
@@ -234,28 +235,34 @@
     async function checkAnswer(button, isCorrect, currentImage) {
         //const buttons = document.querySelectorAll("#options button");
         if (isCorrect) {
-            button.classList.add("correct");
+            const buttons = document.querySelectorAll("#options button");
             voicing = 0;
             const audio = new Audio(images[imageOrder[count]].audio);
-            audio.play();
             count++;
             correctCount++;
             questionCount++;
             score = Math.floor(correctCount / (questionCount + incorrectCount) * 100);
-            await new Promise(r => setTimeout(r, 1000));
+            while (correctButtons.length > 0) {
+                correctButtons.pop().classList.add("correct");
+            }
+                await new Promise(resolve => {
+                audio.addEventListener('ended', resolve);
+                audio.play();
+            });
             displayQuestion();
         }
         else {
-            if ((currentImage.answer.charAt(voicing+1).includes("#") || currentImage.answer.charAt(voicing+1).includes("♭")) && button.textContent.includes(currentImage.answer.charAt(voicing)) ||
-                (document.getElementById("quizImage").textContent === "Fretboard" && (currentImage.answer2.charAt(voicing+1).includes("#") || currentImage.answer2.charAt(voicing+1).includes("♭")) && button.textContent.includes(currentImage.answer2.charAt(voicing)))){
+            if ((currentImage.answer.charAt(voicing+1).includes("#") || currentImage.answer.charAt(voicing+1).includes("♭")) && button.textContent.includes(currentImage.answer.charAt(voicing))){
                 button.classList.add("correct");
+                correctButtons.push(button);
                 enableAccidentals(true);
             }
-            else{    
-                if (button.textContent === currentImage.answer.charAt(voicing) || button.textContent === currentImage.answer2.charAt(voicing)) {
+            else {    
+                if (button.textContent === currentImage.answer.charAt(voicing)) {
                     voicing += 2;
                     button.classList.add("correct");
-                    await new Promise(r => setTimeout(r, 450));
+                    correctButtons.push(button);
+                    await new Promise(r => setTimeout(r, 370));
                     button.classList.remove("correct");
                     if (voicing > currentImage.answer.length - 1) {
                         checkAnswer(button, true, currentImage);
@@ -270,12 +277,13 @@
     
 
     async function checkAnswerAccidental(button, currentImage) {
-        if (button.textContent === currentImage.answer.charAt(voicing+1) || (document.getElementById("quizImage").textContent === "Fretboard" && (button.textContent === currentImage.answer2.charAt(voicing+1))))  {
+        if (button.textContent === currentImage.answer.charAt(voicing+1))  {
+            const buttons = document.querySelectorAll("#options button");
             voicing += 3;
+            correctButtons.push(button);
             button.classList.add("correct");
             button.disabled = true;
-            await new Promise(r => setTimeout(r, 450));
-            button.classList.remove("correct");
+            await new Promise(r => setTimeout(r, 370));
             button.disabled = false;
             if (voicing > currentImage.answer.length - 1) {
                 checkAnswer(button, true, currentImage);
@@ -283,11 +291,6 @@
             else {
                 enableAccidentals(false);
             }
-            document.querySelectorAll("#options button").forEach(button => {
-                if (button.classList.contains("correct")) {
-                    button.classList.remove("correct");
-                }
-            });
         }
         else {
             incorrectAnswer(button);
@@ -318,6 +321,7 @@
                 if (button.textContent === "#" || button.textContent === "♭") {
                     button.disabled = true;
                 }
+                button.classList.remove("correct");
             });
         }
     }
