--- a/Note-Namer-Level-6/index.html
+++ b/Note-Namer-Level-6/index.html
@@ -93,12 +93,12 @@
         { src: "Assets/Images/staffG-B.jpg", fretSrc: "Assets/Images/fretboardG-B.jpg", answer: "G-B",      audio: "Assets/Audio/Pitch recognition audio-G-B.mp3" },
         { src: "Assets/Images/staffG-C.jpg", fretSrc: "Assets/Images/fretboardG-C.jpg", answer: "G-C",      audio: "Assets/Audio/Pitch recognition audio-G-C.mp3" },
         { src: "Assets/Images/staffG-D.jpg", fretSrc: "Assets/Images/fretboardG-D.jpg", answer: "G-D",      audio: "Assets/Audio/Pitch recognition audio-G-D.mp3" },
-        { src: "assets/images/B-Fs.jpg",     fretSrc: "assets/images/Dyad B-Fs.jpg",    answer:  "B-F#",    audio: "assets/audio/B-Fs.mp3" },
-        { src: "assets/images/C-Fs.jpg",     fretSrc: "assets/images/Dyad C-Fs.jpg",    answer:  "C-F#",    audio: "assets/audio/C-Fs.mp3" },
-        { src: "assets/images/Cs-E.jpg",     fretSrc: "assets/images/Dyad Cs-E.jpg",    answer:  "C#-E",    audio: "assets/audio/Cs-E.mp3" },
-        { src: "assets/images/Cs-F.jpg",     fretSrc: "assets/images/Dyad Cs-F.jpg",    answer:  "C#-F",    audio: "assets/audio/Cs-F.mp3" },
+        { src: "assets/images/B-Fs.jpg",     fretSrc: "assets/images/Dyad B-Fs.jpg",    answer: "B-F#",     audio: "assets/audio/B-Fs.mp3" },
+        { src: "assets/images/C-Fs.jpg",     fretSrc: "assets/images/Dyad C-Fs.jpg",    answer: "C-F#",     audio: "assets/audio/C-Fs.mp3" },
+        { src: "assets/images/Cs-E.jpg",     fretSrc: "assets/images/Dyad Cs-E.jpg",    answer: "C#-E",     audio: "assets/audio/Cs-E.mp3" },
+        { src: "assets/images/Cs-F.jpg",     fretSrc: "assets/images/Dyad Cs-F.jpg",    answer: "C#-F",     audio: "assets/audio/Cs-F.mp3" },
         { src: "assets/images/Cs-Fs.jpg",    fretSrc: "assets/images/Dyad Cs-Fs.jpg",   answer: "C#-F#",    audio: "assets/audio/Cs-Fs.mp3" },
-        { src: "assets/images/D-Fs.jpg",     fretSrc: "assets/images/Dyad D-Fs.jpg",    answer:  "D-F#",    audio: "assets/audio/D-Fs.mp3" },
+        { src: "assets/images/D-Fs.jpg",     fretSrc: "assets/images/Dyad D-Fs.jpg",    answer: "D-F#",     audio: "assets/audio/D-Fs.mp3" },
         { src: "assets/images/staffB-E.jpg", fretSrc: "assets/images/fretboardB-E.jpg", answer: "B-E",      audio: "assets/audio/Pitch recognition audio-B-E.mp3" },
         { src: "assets/images/staffB-F.jpg", fretSrc: "assets/images/fretboardB-F.jpg", answer: "B-F",      audio: "assets/audio/Pitch recognition audio-B-F.mp3" },
         { src: "assets/images/staffB-G.jpg", fretSrc: "assets/images/fretboardB-G.jpg", answer: "B-G",      audio: "assets/audio/Pitch recognition audio-B-G.mp3" },
@@ -119,6 +119,7 @@
     let questionCount = 0;
     let voicing = 0;
     let score = 0;
+    let correctButtons = [];
     let imageOrder = shuffleOrder();
 
     
@@ -188,6 +189,7 @@
     
 
     function displayQuestion() {
+        correctButtons = [];
         voicing = 0;
         if (count >= images.length) {
             count = 0;
@@ -235,27 +237,34 @@
     async function checkAnswer(button, isCorrect, currentImage) {
         //const buttons = document.querySelectorAll("#options button");
         if (isCorrect) {
-            button.classList.add("correct");
+            const buttons = document.querySelectorAll("#options button");
             voicing = 0;
             const audio = new Audio(images[imageOrder[count]].audio);
-            audio.play();
             count++;
             correctCount++;
             questionCount++;
             score = Math.floor(correctCount / (questionCount + incorrectCount) * 100);
-            await new Promise(r => setTimeout(r, 1000));
+            while (correctButtons.length > 0) {
+                correctButtons.pop().classList.add("correct");
+            }
+                await new Promise(resolve => {
+                audio.addEventListener('ended', resolve);
+                audio.play();
+            });
             displayQuestion();
         }
         else {
             if ((currentImage.answer.charAt(voicing+1).includes("#") || currentImage.answer.charAt(voicing+1).includes("♭")) && button.textContent.includes(currentImage.answer.charAt(voicing))){
                 button.classList.add("correct");
+                correctButtons.push(button);
                 enableAccidentals(true);
             }
-            else{    
+            else {    
                 if (button.textContent === currentImage.answer.charAt(voicing)) {
                     voicing += 2;
                     button.classList.add("correct");
-                    await new Promise(r => setTimeout(r, 450));
+                    correctButtons.push(button);
+                    await new Promise(r => setTimeout(r, 370));
                     button.classList.remove("correct");
                     if (voicing > currentImage.answer.length - 1) {
                         checkAnswer(button, true, currentImage);
@@ -271,11 +280,12 @@
 
     async function checkAnswerAccidental(button, currentImage) {
         if (button.textContent === currentImage.answer.charAt(voicing+1))  {
+            const buttons = document.querySelectorAll("#options button");
             voicing += 3;
+            correctButtons.push(button);
             button.classList.add("correct");
             button.disabled = true;
-            await new Promise(r => setTimeout(r, 450));
-            button.classList.remove("correct");
+            await new Promise(r => setTimeout(r, 370));
             button.disabled = false;
             if (voicing > currentImage.answer.length - 1) {
                 checkAnswer(button, true, currentImage);
@@ -283,11 +293,6 @@
             else {
                 enableAccidentals(false);
             }
-            document.querySelectorAll("#options button").forEach(button => {
-                if (button.classList.contains("correct")) {
-                    button.classList.remove("correct");
-                }
-            });
         }
         else {
             incorrectAnswer(button);
@@ -318,6 +323,7 @@
                 if (button.textContent === "#" || button.textContent === "♭") {
                     button.disabled = true;
                 }
+                button.classList.remove("correct");
             });
         }
     }
