--- a/Note-Namer-Level-8a/index.html
+++ b/Note-Namer-Level-8a/index.html
@@ -77,7 +77,7 @@
 </head>
 <body>
 <div>
-    <button id="switchImageButton", title="Fretboard", onclick="switchimages()">Fretboard</button>
+    <button id="switchImageButton", title="Fretboard", onclick="switchImages()">Fretboard</button>
 </div>
 <img id="quizImage" src="" alt="Quiz Image">
 <div id="options">
