--- a/Note-Namer-Level-newsletter/index.html
+++ b/Note-Namer-Level-newsletter/index.html
@@ -87,7 +87,7 @@
 <div>
     <button id="scoreButton", title="Score", onmouseenter="scoreHover(true)", onmouseleave="scoreHover(false)">View Score</button>
 </div>
-<button id="productButton" onclick="window.open('https://www.aaronshearerfoundation.org/asf-bookstore2/best-classical-guitar-method/', '_blank').focus();">Product Page</button>
+<button id="productButton" onclick="window.open('https://www.aaronshearerfoundation.org/asf-bookstore2/best-classical-guitar-method/', '_blank').focus();">Learn More</button>
 <audio id="audio" controls style="display: none;"></audio>
 <script>
     const images = [
