Learn more update

--- a/Note-Namer-Level-newsletter/index.html
+++ b/Note-Namer-Level-newsletter/index.html
@@ -58,8 +58,8 @@
     button.product {
         background-color: rgb(0, 92, 230); 
         position: absolute;
-        top: 22vh;
-        font-size: 120%;
+        margin-left: 25vw;
+        top: 35vh;
     }
     button.product:hover {
         background-color: rgb(24, 116, 255);
@@ -90,10 +90,11 @@
     <button id="switchImageButton", title="Fretboard", onclick="switchImages()">Fretboard</button>
 </div>
 <img id="quizImage" src="" alt="Quiz Image">
-<button class ="product" id="productButton" onclick="window.open('https://www.aaronshearerfoundation.org/asf-bookstore2/best-classical-guitar-method/', '_blank').focus();">Learn More</button>
 <div id="options">
     <!-- Buttons will be generated dynamically -->
 </div>
+<button class ="product" id="productButton" onclick="window.open('https://www.aaronshearerfoundation.org/asf-bookstore2/best-classical-guitar-method/', '_blank').focus();">Learn More</button>
+
     <button id="scoreButton", title="Score", onmouseenter="scoreHover(true)", onmouseleave="scoreHover(false)">View Score</button>
 <audio id="audio" controls style="display: none;"></audio>
 <script>
