--- a/Note-Namer-Level-6/index.html
+++ b/Note-Namer-Level-6/index.html
@@ -87,12 +87,12 @@
 <audio id="audio" controls style="display: none;"></audio>
 <script>
     const images = [
-        { src: "Assets/Images/staffA-B.jpg", fretSrc: "Assets/Images/fretboardA-B.jpg", answer: "A-B",      audio: "Assets/Audio/Pitch recognition audio-A-B.mp3" },
-        { src: "Assets/Images/staffA-C.jpg", fretSrc: "Assets/Images/fretboardA-C.jpg", answer: "A-C",      audio: "Assets/Audio/Pitch recognition audio-A-C.mp3" },
-        { src: "Assets/Images/staffA-D.jpg", fretSrc: "Assets/Images/fretboardA-D.jpg", answer: "A-D",      audio: "Assets/Audio/Pitch recognition audio-A-D.mp3" },
-        { src: "Assets/Images/staffG-B.jpg", fretSrc: "Assets/Images/fretboardG-B.jpg", answer: "G-B",      audio: "Assets/Audio/Pitch recognition audio-G-B.mp3" },
-        { src: "Assets/Images/staffG-C.jpg", fretSrc: "Assets/Images/fretboardG-C.jpg", answer: "G-C",      audio: "Assets/Audio/Pitch recognition audio-G-C.mp3" },
-        { src: "Assets/Images/staffG-D.jpg", fretSrc: "Assets/Images/fretboardG-D.jpg", answer: "G-D",      audio: "Assets/Audio/Pitch recognition audio-G-D.mp3" },
+        { src: "Assets/images/staffA-B.jpg", fretSrc: "Assets/Images/fretboardA-B.jpg", answer: "A-B",      audio: "Assets/Audio/Pitch recognition audio-A-B.mp3" },
+        { src: "Assets/images/staffA-C.jpg", fretSrc: "Assets/Images/fretboardA-C.jpg", answer: "A-C",      audio: "Assets/Audio/Pitch recognition audio-A-C.mp3" },
+        { src: "Assets/images/staffA-D.jpg", fretSrc: "Assets/Images/fretboardA-D.jpg", answer: "A-D",      audio: "Assets/Audio/Pitch recognition audio-A-D.mp3" },
+        { src: "Assets/images/staffG-B.jpg", fretSrc: "Assets/Images/fretboardG-B.jpg", answer: "G-B",      audio: "Assets/Audio/Pitch recognition audio-G-B.mp3" },
+        { src: "Assets/images/staffG-C.jpg", fretSrc: "Assets/Images/fretboardG-C.jpg", answer: "G-C",      audio: "Assets/Audio/Pitch recognition audio-G-C.mp3" },
+        { src: "Assets/images/staffG-D.jpg", fretSrc: "Assets/Images/fretboardG-D.jpg", answer: "G-D",      audio: "Assets/Audio/Pitch recognition audio-G-D.mp3" },
         { src: "assets/images/B-Fs.jpg",     fretSrc: "assets/images/Dyad B-Fs.jpg",    answer: "B-F#",     audio: "assets/audio/B-Fs.mp3" },
         { src: "assets/images/C-Fs.jpg",     fretSrc: "assets/images/Dyad C-Fs.jpg",    answer: "C-F#",     audio: "assets/audio/C-Fs.mp3" },
         { src: "assets/images/Cs-E.jpg",     fretSrc: "assets/images/Dyad Cs-E.jpg",    answer: "C#-E",     audio: "assets/audio/Cs-E.mp3" },
