Disable correct answer

--- a/Note-Namer-Level-11/index.html
+++ b/Note-Namer-Level-11/index.html
@@ -227,6 +227,7 @@
     async function checkAnswer(button, isCorrect, currentImage) {
         //const buttons = document.querySelectorAll("#options button");
         if (isCorrect) {
+            button.disabled = true;
             button.classList.add("correct");
             voicing = 0;
             const audio = new Audio(images[imageOrder[count]].audio);
