--- a/Note-Namer-Level-4/index.html
+++ b/Note-Namer-Level-4/index.html
@@ -215,7 +215,7 @@
     async function checkAnswer(button, isCorrect, currentImage) {
         //const buttons = document.querySelectorAll("#options button");
         if (isCorrect) {
-            const buttons = document.querySelectorAll("#options button");
+            button.disabled = true;
             voicing = 0;
             const audio = new Audio(images[imageOrder[count]].audio);
             count++;
