--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -350,6 +350,7 @@
 
     async function checkAnswer(button, isCorrect, currentImage) {
         if (isCorrect) {
+            button.disabled = true;
             button.classList.add("correct");
             let audio = new Audio(images[imageOrder[count]].audio);
             audio.play();
