--- a/Note-Namer-Level-newsletter/index.html
+++ b/Note-Namer-Level-newsletter/index.html
@@ -204,6 +204,7 @@
     async function checkAnswer(button, isCorrect) {
         //const buttons = document.querySelectorAll("#options button");
             if (isCorrect) {
+                button.disabled = true;
                 button.classList.add("correct");
                 const audio = new Audio(images[imageOrder[count]].audio);
                 audio.play();
