--- a/MultiTrackApp/index.html
+++ b/MultiTrackApp/index.html
@@ -31,6 +31,21 @@
     <!-- Tracks will be generated -->
   </div>
 
+  <div id="loop-controls" hidden>
+    <label for="loop-start">Loop Start:</label>
+    <br />
+    <input type="range" id="loop-start" value="0" min="0" style="width: 50%;"/>
+
+    <br />
+
+    <label for="loop-end">Loop End:</label>
+    <br />
+    <input type="range" id="loop-end" value="0" min="0" style="width: 50%;"/>
+  </div>
+
+  <!-- Toggle Loop Button -->
+    <button id="toggle-loop" onclick="toggleLoop()">🔁</button>
+
   <div id="track-container">
     <div class="track">
       <label for="file-upload">Upload Tracks:</label>
@@ -38,7 +53,9 @@
     </div>
 
     <label for="speed">Speed (BPM):</label>
-    <input type="number" id="speed2" value="100" onchange="changeSpeed(this.value)">
+    <input type="range" id="speed" value="100" min="50" max="200" oninput="changeSpeed(this.value)">
+    <!-- Reset Speed Button -->
+    <button id="reset-speed" onclick="resetSpeed()">Default Speed</button>
   </div>
 
   <script src="app.js"></script>
