--- a/MultiTrackApp-Trio1-Andante-Test/index.html
+++ b/MultiTrackApp-Trio1-Andante-Test/index.html
@@ -34,40 +34,56 @@
 
   <div id="track-container">
     <div class="track">
-        <label for="track1">Guitar 1:</label>
-        <audio id="track1">
-            <source src="Tracks/Trio 1 Andante Guitar I.mp3" type="audio/mp3">
-            Your browser does not support the audio element.
-        </audio>
-        <button class="mute" id="mute-track1" onclick="toggleMute('track1')">🔊</button>
+      <label for="track1">Guitar 1:</label>
+      <audio id="track1">
+        <source src="Tracks/Trio 1 Andante Guitar I.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+      </audio>
+      <button class="mute" id="mute-track1" onclick="toggleMute('track1')">🔊</button>
+      <input type="range" min="0" max="1" step="0.01" value="1" 
+           class="volume-slider" style="writing-mode: bt-lr; -webkit-appearance: slider-vertical; width: 30px; height: 100px;"
+           onchange="setTrackVolume('track1', this.value)" 
+           oninput="setTrackVolume('track1', this.value)">
     </div>
 
     <div class="track">
-        <label for="track2">Guitar 2:</label>
-        <audio id="track2">
-            <source src="Tracks/Trio 1 Andante Guitar II.mp3" type="audio/mp3">
-            Your browser does not support the audio element.
-        </audio>
-        <button class="mute" id="mute-track2" onclick="toggleMute('track2')">🔊</button>
+      <label for="track2">Guitar 2:</label>
+      <audio id="track2">
+        <source src="Tracks/Trio 1 Andante Guitar II.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+      </audio>
+      <button class="mute" id="mute-track2" onclick="toggleMute('track2')">🔊</button>
+      <input type="range" min="0" max="1" step="0.01" value="1" 
+           class="volume-slider" style="writing-mode: bt-lr; -webkit-appearance: slider-vertical; width: 30px; height: 100px;"
+           onchange="setTrackVolume('track2', this.value)" 
+           oninput="setTrackVolume('track2', this.value)">
     </div>
 
     <div class="track">
       <label for="track3">Guitar 3:</label>
       <audio id="track3">
-          <source src="Tracks/Trio 1 Andante Guitar III.mp3" type="audio/mp3">
-          Your browser does not support the audio element.
+        <source src="Tracks/Trio 1 Andante Guitar III.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
       </audio>
       <button class="mute" id="mute-track3" onclick="toggleMute('track3')">🔊</button>
-  </div>
+      <input type="range" min="0" max="1" step="0.01" value="1" 
+         class="volume-slider" style="writing-mode: bt-lr; -webkit-appearance: slider-vertical; width: 30px; height: 100px;"
+         onchange="setTrackVolume('track3', this.value)" 
+         oninput="setTrackVolume('track3', this.value)">
+    </div>
 
-  <div class="track">
+    <div class="track">
     <label for="track4">Metronome:</label>
     <audio id="track4">
-        <source src="Tracks/Trio 1 Andante Metronome.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
+      <source src="Tracks/Trio 1 Andante Metronome.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
     </audio>
     <button class="mute" id="mute-track4" onclick="toggleMute('track4')">🔊</button>
-</div>
+    <input type="range" min="0" max="1" step="0.01" value="1" 
+         class="volume-slider" style="writing-mode: bt-lr; -webkit-appearance: slider-vertical; width: 30px; height: 100px;"
+         onchange="setTrackVolume('track4', this.value)" 
+         oninput="setTrackVolume('track4', this.value)">
+  </div>
 
     <div class="track-slider">
       <label for="timeline">Timeline:</label>
