Fixed vertical sliders
Fixed vertical sliders

--- a/MultiTrackApp-Trio1-Andante-Test/index.html
+++ b/MultiTrackApp-Trio1-Andante-Test/index.html
@@ -41,7 +41,7 @@
       </audio>
       <button class="mute" id="mute-track1" onclick="toggleMute('track1')">🔊</button>
       <input type="range" min="0" max="1" step="0.01" value="1" 
-           class="volume-slider" style="writing-mode: bt-lr; -webkit-appearance: slider-vertical; width: 30px; height: 100px;"
+           class="volume-slider" style="writing-mode: vertical-lr; direction: rtl; width: 30px; height: 100px;"
            onchange="setTrackVolume('track1', this.value)" 
            oninput="setTrackVolume('track1', this.value)">
     </div>
@@ -54,7 +54,7 @@
       </audio>
       <button class="mute" id="mute-track2" onclick="toggleMute('track2')">🔊</button>
       <input type="range" min="0" max="1" step="0.01" value="1" 
-           class="volume-slider" style="writing-mode: bt-lr; -webkit-appearance: slider-vertical; width: 30px; height: 100px;"
+           class="volume-slider" style="writing-mode: vertical-lr; direction: rtl; width: 30px; height: 100px;"
            onchange="setTrackVolume('track2', this.value)" 
            oninput="setTrackVolume('track2', this.value)">
     </div>
@@ -67,7 +67,7 @@
       </audio>
       <button class="mute" id="mute-track3" onclick="toggleMute('track3')">🔊</button>
       <input type="range" min="0" max="1" step="0.01" value="1" 
-         class="volume-slider" style="writing-mode: bt-lr; -webkit-appearance: slider-vertical; width: 30px; height: 100px;"
+         class="volume-slider" style="writing-mode: vertical-lr; direction: rtl; width: 30px; height: 100px;"
          onchange="setTrackVolume('track3', this.value)" 
          oninput="setTrackVolume('track3', this.value)">
     </div>
@@ -80,7 +80,7 @@
     </audio>
     <button class="mute" id="mute-track4" onclick="toggleMute('track4')">🔊</button>
     <input type="range" min="0" max="1" step="0.01" value="1" 
-         class="volume-slider" style="writing-mode: bt-lr; -webkit-appearance: slider-vertical; width: 30px; height: 100px;"
+         class="volume-slider" style="writing-mode: vertical-lr; direction: rtl; width: 30px; height: 100px;"
          onchange="setTrackVolume('track4', this.value)" 
          oninput="setTrackVolume('track4', this.value)">
   </div>
