Made it so you can't mute everything

--- a/MultiTrackApp-Play1-Mobile/index.html
+++ b/MultiTrackApp-Play1-Mobile/index.html
@@ -42,22 +42,22 @@
   <div id="track-container">
     <div class="track">
       <label for="track1">Guitar 1:</label>
-      <button class="mute" id="mute-track1" onclick="toggleTrack(1)">🔊</button>
+      <button class="mute" id="mute-track1" onclick="toggleTrack(1, true)">🔊</button>
     </div>
 
     <div class="track">
       <label for="track2">Guitar 2:</label>
-      <button class="mute" id="mute-track2" onclick="toggleTrack(2)">🔊</button>
+      <button class="mute" id="mute-track2" onclick="toggleTrack(2, true)">🔊</button>
     </div>
 
     <div class="track">
       <label for="track3">Guitar 3:</label>
-      <button class="mute" id="mute-track3" onclick="toggleTrack(3)">🔊</button>
+      <button class="mute" id="mute-track3" onclick="toggleTrack(3, true)">🔊</button>
     </div>
 
     <div class="track">
     <label for="track4">Metronome:</label>
-    <button class="mute" id="mute-track4" onclick="toggleTrack(4)">🔊</button>
+    <button class="mute" id="mute-track4" onclick="toggleTrack(4, true)">🔊</button>
   </div>
 
     <div class="track-slider">
